<resources>
    <string name="app_name">Comirger</string>
    <string name="font_name_fontawesome">fontawesome</string>
    <string name="font_name_source_sans_pro">SourceSansPro</string>
    <string name="sign_in_people">Войти</string>
    <string name="registration_in_people">Регистрация физ. лица</string>
    <string name="sign_in_organization">Войти как организация</string>
    <string name="registration_in_organization">Регистрация организации</string>
    <string name="author">\@Виталий Мукменёв</string>
    <string name="enter_email">Введите e-mail</string>
    <string name="enter_password">Введите пароль</string>
    <string name="sign_in">Войти</string>
    <string name="cancel">Отмена</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">
        Требуется водитель международник

        Владение категориями В, C, E, умение устранить мелкую неисправность автопоезда в рейсе
        знание порядка оформления товарно-сопроводительных документов (МДП)

    </string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main_list">MainList</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_details">Details</string>
    <string name="money">1200 $ / в месяц</string>
    <string name="main_text_nav_bar">Найди работу мечты!</string>
    <string name="my_ad">Мои объявления</string>
    <string name="chat">Чат</string>
    <string name="sign_in_how_quest">Войти как гость</string>
    <string name="registration">Registration</string>
    <string name="add_ad">Подать объявление</string>
    <string name="add_ad_text">Информация об объявлении</string>
    <string name="add_information">Добавьте данные</string>
    <string name="name">Название объявления</string>
    <string name="name_job">Название работы</string>
    <string name="cost_job">Цена</string>
    <string name="contacts">Телефон</string>
    <string name="add_about_job">Описание</string>
    <string name="photo_image">Фото работы</string>
    <string name="send_message">Отправить</string>
    <string name="message_to_developers">Сообщение разработчикам</string>
    <string name="text_message_to_developers">Введите Ваше сообщение</string>
    <string name="emptyView">Нет объявлений</string>
    <string name="list_is_empty">Нет объявлений!</string>
    <string name="komirger">Comirger</string>
    <string name="log_in">Log-in</string>
    <string name="private_room">Личный кабинет</string>
    <string name="prioriry">Избранное</string>
    <string name="settings">Скидки</string>
    <string name="share">Поделиться</string>
    <string name="write_to_developers">Написать разработчикам</string>
    <string name="all_ads">Все объявления твоего города</string>
    <string name="all_ads_list">Все объявления</string>
    <string name="start_string_tel">+7</string>
    <string name="string_location">Адрес</string>
    <string name="check_category">Категория</string>
    <string name="edit_menu">Редактировать</string>
    <string name="delete_account">Удалить аккаунт</string>
    <string name="buy_premium">Купить премиум - 30 руб/мес.</string>
    <string name="category">Категория</string>
    <string name="string_cost_from">Цена от:</string>
    <string name="string_cost_to">До:</string>
    <string name="ok">Поиск</string>
    <string name="clean_all">Очистить все</string>
    <string name="city">Город</string>
    <string name="you_not_have_coupons">У Вас нет купонов</string>
    <string name="enter_fio">ФИО</string>
    <string name="save">Сохранить</string>
    <string name="date">23 января</string>
    <string name="banner_ad_unit_id">ca-app-pub-8152940176557798/6945787191</string>
    <string name="buy_coupons">Получить скидку</string>
    <string name="job">Работа</string>
    <string name="houses">Недвижимость</string>
    <string name="ladies_garderobe">Женский гардероб</string>
    <string name="mens_garderobe">Мужской гардероб</string>
    <string name="baby_garderobe">Детский гардероб</string>
    <string name="baby_products">Детские товары</string>
    <string name="handmade">Хендмейд</string>
    <string name="auto_and_moto">Авто и мото</string>
    <string name="phones_and_tablets">Телефоны и планшеты</string>
    <string name="photo_and_videocameras">Фото и видеокамеры</string>
    <string name="computers">Компьютеры</string>
    <string name="electronics">Электроника и бытовая техника</string>
    <string name="for_home_for_dacha">Для дома для дачи</string>
    <string name="repair_and_building">Ремонт и строительство</string>
    <string name="beauterfool">Красота и здоровье</string>
    <string name="sport_and_relax">Спорт и отдых</string>
    <string name="hobbies">Хобби и развлечения</string>
    <string name="animals">Животные</string>
    <string name="for_business">Для бизнеса</string>
    <string name="another">Прочее</string>
    <string name="all_category">Все категории</string>
    <string name="search">Поиск</string>
    <string name="type_ad">Тип объявления</string>
    <string name="buy">Купить</string>
    <string name="sell">Продать</string>
    <string name="premium">Премиум</string>
    <string name="not_premium">Не премиум</string>
    <string name="price">Цена,$</string>
    <string name="only_ith_photo">Только с фото</string>
    <string name="adress">Адрес</string>
    <string name="phone_number">Номер телефона</string>
    <string name="del">Удалить</string>
    <string name="farm">Сельхозпродукция</string>
    <string name="milk">Молоко</string>
    <string name="eggs">Яйца</string>
    <string name="vegetables">Овощи</string>
    <string name="fruit">Фрукты</string>
    <string name="inventary">Инвентарь</string>
    <string name="inner">Другое</string>
    <string name="my_not_active_ad">Неактивные</string>
    <string name="my_locate">Показывать мое местоположение</string>
    <string name="about_me">Обо мне</string>
    <string name="all_companys">Все компании</string>
    <string name="registration_yur">Регистрация юр лица</string>
    <string name="name_company">Название компании</string>
    <string name="about_company">О компании</string>
    <string name="date_start_company">Дата основания компании</string>
    <string name="type_of_work">Тип работы(посменно, свободный график и и.д)</string>
    <string name="contacts_company">Контакты</string>
    <string name="find_companies_name">Поиск</string>
    <string name="enter_word">Введите запрос</string>
    <string name="price_from">Цена от:</string>
    <string name="price_to">до:</string>
    <string name="add_review">Напишите отзыв</string>
    <string name="review">Оставьте отзы о сервисе Комиргер</string>
    <string name="active_ads">Активные объявления</string>
    <string name="on_moderate">На модерации</string>
    <string name="dislike">Отклоненные</string>
    <string name="consistance_auto">Состояние авто</string>
    <string name="marka_auto">Марка авто</string>
    <string name="model_auto">Модель авто</string>
    <string name="type_of_body">Тип кузова</string>
    <string name="colot">Цвет</string>
    <string name="region">Регион</string>
    <string name="year_production_car">Год выпуска</string>
    <string name="how_much_completed_road">Пробег</string>
    <string name="type_of_engine">Тип двигателя</string>
    <string name="value_engine">Объем</string>
    <string name="transmission">Трансмиссия</string>
    <string name="is_returned">Возможен обмен</string>
    <string name="is_rented">Возможна ли рассрочка</string>
    <string name="size">Размер</string>
    <string name="color">Цвет</string>
    <string name="material">Материал</string>
    <string name="error_registration">Вы неправильно ввели \n данные для регистрации</string>
    <string name="premium_1">Добавить объявление</string>
    <string name="name_ad">Название объявления</string>
    <string name="rewiew_ad">Описание объявления</string>
    <string name="complete">Сохранить</string>
    <string name="btn_flexible_example">Flexible Example</string>
    <string name="lbl_amount">Amount:</string>
    <string name="lbl_ccy">Currency:</string>
    <string name="lbl_email">Email:</string>
    <string name="lbl_description">Описание:</string>
    <string name="btn_pay">Оплатить</string>
    <string name="e_invalid_amount">Invalid amount</string>
    <string name="e_invalid_email">Invalid email</string>
    <string name="e_invalid_description">Enter description</string>
    <string name="activity_pay_pay">Pay</string>
    <string name="offer"><u>Договор оферты</u></string>
    <string name="up_ad">Поднять объявление, 10 руб/сутки</string>
    <string name="seller">Продано!</string>
    <string name="marker">Выделить, 30 р.</string>
</resources>