<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_margin="20dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.review.RewiewActivity">
    <TextView
        android:id="@+id/text_rewiew"
        android:layout_alignParentTop="true"
        android:text="@string/review"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:layout_below="@id/text_rewiew"
        android:id="@+id/edit_text_review"
        android:hint="@string/add_review"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/button_review_save"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/edit_text_review"
        android:text="@string/save" />

    <Button
        android:id="@+id/button_review_cancel"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@+id/edit_text_review"
        android:layout_centerHorizontal="true"
        android:text="@string/cancel" />
</RelativeLayout>