<RelativeLayout
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:gravity="center"
                android:layout_gravity="center"
                android:text="@string/premium_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/name_ad_admin"
                android:hint="@string/name_ad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <EditText
                android:hint="@string/rewiew_ad"
                android:id="@+id/rewiew_ad_premium_admin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/add_premium_ad"
                android:text="@string/complete"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>