<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:gravity="center"
    android:layout_gravity="center"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.accherniakocich.android.findjob.edit_profile.EditProfile">
    <EditText
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:id="@+id/et_edit_name"
        android:hint="@string/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:id="@+id/et_about_me"
        android:hint="@string/about_me"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TableRow
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/my_locate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <CheckBox
            android:id="@+id/my_locate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </TableRow>
    <TableRow
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:onClick="onClick"
            android:id="@+id/edit_name_cancel"
            android:text="@string/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Button
            android:onClick="onClick"
            android:id="@+id/edit_name_save"
            android:text="@string/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </TableRow>
</LinearLayout>
