<LinearLayout
    android:layout_gravity="center"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical">
    <TextView
        android:gravity="center"
        android:layout_gravity="center"
        android:text="@string/delete_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:gravity="center"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@string/del"
            android:id="@+id/delete_acc_button_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:text="@string/cancel"
            android:id="@+id/delete_acc_button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>