<LinearLayout
    android:layout_marginBottom="30dp"
    android:layout_marginTop="30dp"
    android:id="@+id/linear_dialog"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView
        android:layout_marginBottom="10dp"
        android:textAlignment="center"
        android:textColor="#000"
        android:textSize="20sp"
        android:text="@string/up_ad"
        android:id="@+id/dialog_up_ad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <View
        android:background="#747474"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>
    <TextView
        android:layout_marginBottom="10dp"
        android:textAlignment="center"
        android:textColor="#000"
        android:textSize="20sp"
        android:text="@string/seller"
        android:id="@+id/dialog_seller"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <View
        android:background="#747474"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>
    <TextView
        android:layout_marginBottom="10dp"
        android:textAlignment="center"
        android:textColor="#000"
        android:textSize="20sp"
        android:text="@string/marker"
        android:id="@+id/dialog_marker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>