<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    android:id="@+id/container_frame_log_in"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mukmenev.android.findjob.activities.log_and_reg.LoginUser"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center">
    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:layout_marginStart="70dp"
            android:layout_marginEnd="70dp"
            android:layout_gravity="center"
            android:layout_width="180dp"
            android:layout_height="120dp"
            android:src="@drawable/log_in"/>
        <EditText
            android:inputType="textEmailAddress"
            android:id="@+id/et_email_log_in"
            android:layout_marginTop="30sp"
            android:layout_marginStart="30sp"
            android:layout_marginEnd="30sp"
            android:hint="@string/enter_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/et_password_log_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/enter_password"
            android:layout_marginStart="30sp"
            android:layout_marginEnd="30sp"
            android:inputType="textPassword" />
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50sp"
            android:layout_marginEnd="50sp"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="10dp">
            <Button
                android:textStyle="bold"
                android:layout_marginEnd="10dp"
                android:background="@color/main_color_buttons"
                android:onClick="onClick"
                android:id="@+id/cancel_sign_in"
                android:layout_weight="1"
                android:fontFamily="sans-serif-condensed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cancel"/>
            <Button
                android:textStyle="bold"
                android:background="@color/main_color_buttons"
                android:onClick="onClick"
                android:id="@+id/sign_in"
                android:fontFamily="sans-serif-condensed"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"/>
        </TableRow>
    </LinearLayout>
</FrameLayout>
